--- a/download_xhs_img_water_mark.ipynb
+++ b/download_xhs_img_water_mark.ipynb
@@ -27,7 +27,7 @@
     "        'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9',\n",
     "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 UBrowser/6.2.4098.3 Safari/537.36',\n",
     "        'Accept-Encoding': 'gzip, deflate',\n",
-    "        'cookie': 'your cookie' \n",
+    "        'cookie': 'xhsTrackerId=d8719ac0-ca40-4f87-a0c9-108cd68565ca; xhsTrackerId.sig=WlxJupjNJ9nQ6Xq-pDa_gIcm1XEvEYJgEFvQC0EFqpU; xsecappid=xhs-pc-web; a1=1865537cc3b6fbadrs4phq75wdun653vphyxpibb550000780722; webId=bbbba159a91e749b9403da1503b63af9; gid=yYK22qWSidU0yYK22qWSSx3DqDKiD0fFM4UxvD2AW2Ef7C28IK2qhU888WY8WJJ8JW28W2Sj; gid.sign=nXwjQuFOeHoysPwhxzRpyJMEG9s=; extra_exp_ids=h5_2302011_origin,h5_1208_exp3,h5_1130_clt,ios_wx_launch_open_app_exp,h5_video_ui_exp3,wx_launch_open_app_duration_origin,ques_clt1; extra_exp_ids.sig=JPU5iPhkQ0edn1JAofufihfoki2X9iFGfhcWJwZPOkU; webBuild=1.1.11; websectiga=cf46039d1971c7b9a650d87269f31ac8fe3bf71d61ebf9d9a0a87efb414b816c; sec_poison_id=0d5ae88b-9167-4460-bc6d-cd555c4fdf58; xhsTracker=url=explore&xhsshare=CopyLink; xhsTracker.sig=wmLdXV__wbETiz1qUgqoiY8swj2zGxC5B-xOV9HIhWg; web_session=0400697e7e751e26e7a51696d8314b9746a6b4' \n",
     "    }\n",
     "    \n",
     "    r = requests.get(url, headers = headers)\n",
